--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "body-parser": "^1.19.1",
         "chai": "^4.3.4",
+        "dotenv": "^11.0.0",
         "express": "^4.15.2",
         "mocha": "^9.1.3",
         "mongoose": "^6.0.12"
